﻿-= Stran 1.3.0 [2009-12-18 Stran 研发版本] 发布 =-
新增功能
- 汇出/汇入村庄的资源限制 (chihsun)
- 自动更新村庄排序，与网页显示同步 (chihsun)
- 村庄被攻击时自动变更村庄色彩警示 (chihsun)
错误修正
- 修正建筑队列代码 (chihsun)
- 修正罗马缺粮无法建造时不正常删除队列 (chihsun)
- 改进探测军队资讯的代码 (依资源存量升级) (dai2050)

-= Stran 1.2.9 [2009-12-12 独立更新 Stran 版本] 发布 =-
新增功能
- 造兵的资源限制 (chihsun)
- 生产开拓者及司令官 (chihsun)
- 村庄命名 (chihsun)
错误修正
- 修正研发等级侦测代码问题 (chihsun)
- 改进AI 功能的代码 (依资源存量升级) (dai2050)
- 修正无法新建皇宫 (萧何)

-= Stran 1.2.8.1 [2009-11-20 独立更新 Stran 版本] 发布 =-
- 修正国服的兼容性 (chihsun)

-= Stran 1.2.8 [2009-11-11 独立更新 Stran 版本] 发布 =-
- 支援 T3.1&T3.5&T3.6 (T3.6只能部分支援，请小心使用，并请回报问题，以便更新)
- 修正自动平仓错误
- 改进AI功能 (原来依等级升级时，农田无法升至10级的改良)
- 修正大仓大马建造军队的判断错误
- 更人性化地重新调整界面的顺序 (tab index)

-= Stran 1.2.71 [2009-9-9 是 Stran 最后更新版本] 发布 =-
- 修正派对讯息侦测问题
- 修正军队探测时，无法正确探测英雄
- 于军队清单中加入造兵及出兵右键选单
- 修正了部分建筑及军队研发升级的资源问题

-= Stran 1.2.7 [2009-7-21 是 Stran 两周年纪念日哟] 发布 =-
- 修正了用户名中非法字符导致崩溃的问题
- 加入大兵马建造支持，没有相关建筑时请勿滥用以免发生危险 (感谢chihsun)
- 支持预设运输目标功能，可在Transfer中，每行填入 X|Y|名称 来指定预设运输目标。例如 100|160|食堂村。仅供同服务器内使用，请勿滥用以免发生危险 (感谢chihsun)
- 宝库现在可以造到20级了，基本资源田现在可以造到21级了 (感谢chihsun)
- 修正了部分研发升级的探测问题 (感谢chihsun)
- 历史上的今天：2007-7-21，Stravian项目正式创建。在这2年的时间里，感谢各位玩家的支持，接下来，也请继续支持下去。谢谢！

-= Stran 1.2.6 [Nikola Tesla] 发布 =-
- 在option中加入autorun=true，可在启动程序后自动登录所有账号，请谨慎使用 (感谢ss0628)
- 修正了拆除和平仓的探测问题(要求测试) (感谢chihsun和lovermagic)
- 修正了酿酒厂和古罗马的基本面数据，新增了部分建造依赖数据(要求广泛测试) (感谢chihsun)
- 修正了部分语言文本的探测问题 (感谢chihsun)
- 修正了粮食和仓库不符合建造要求时的探测问题(要求广泛测试) (感谢chihsun)
- 修正了账号无法删除的问题 (感谢chihsun)
- 添加了繁体中文的服务器和客户端语言包 (感谢chihsun)
- 添加了造兵时强制显示所有兵种的选项，请勿滥用以免发生危险
- 电脑使用了交流电 (感谢尼古拉·特斯拉)

-= Stran 1.2.5 [GoldenFox] 发布 =-
- 修正了运输探测的问题 (感谢firefox)
- 修正了派对和研发升级探测的问题 (感谢chihsun)

-= Stran 1.2.4 [GoldenCOMX] 发布 =-
- 添加了单个村庄的大致资源比例情况显示。1表示10%到19.9%范围，7表示70%到79.9%范围，E=空(只有粮食会空)，F=满
- 添加了COMX最新版本的支持
- 修复BUG1649

-= Stran 1.2.3 [GoldenPhoenix] 发布 =-
- 添加了新增田(7田等)的数据
- 修正了建造队列不按顺序造建筑的问题
- 修正了造兵显示不正确的问题
- 修正了不能取消拆除的问题
- 取消建造现在应该能用了 (1.2.2里加入的，漏写了)

-= Stran 1.2.2 [GoldenPhoenix] 发布 =-
- 可在游戏中设置新的主村
- 修正了升级兵种探测的问题 (我想杀人……)
- 运输标记于状态栏：NC不运送粮食，FG无视爆仓检查
