@@ -189,7 +189,7 @@ forcetransfer=取消爆倉限制
 CMBProduceTroop=建造軍隊(&O)
 CMBRaid=派遣軍隊(&S)
 vres=資源
-newcap=模擬為主村(&X)
+newcap=更新主村的資訊(&C)
 showallarmy=顯示所有軍種(&A)
 Great=大兵營或大馬廄或皇宮(&G)
 TResourceLimit=軍隊建造資源限制
